# University_parallelProgramming

lab1/: CMakeLists.txt  main.c  ЛБ1_Берніш_Микола.docx
lab10/: lab10.c  ЛБ10_Берніш_Микола.docx
lab11/: CMakeLists.txt  lab11.cu  ЛБ11_Берніш_Микола.docx
lab12/: CMakeLists.txt  lab_12_1.cu  lab_12_2.cu  lab_12_3.cu  ЛБ12_Берніш_Микола.docx
lab2/: CMakeLists.txt  main.c  ЛБ2_Берніш_Микола.docx
lab3/: CMakeLists.txt  main.c  ЛБ3_Берніш_Микола.docx
lab4/: 121  CMakeLists.txt  main.c  ЛБ4_Берніш_Микола.docx
lab5/: CMakeLists.txt  lab5.c  ЛБ5_Берніш_Микола.docx
lab6/: CMakeLists.txt  lab6  lab6.c  ЛБ6_Берніш_Микола.docx
lab7/: CMakeLists.txt  lab7.c  ЛБ7_Берніш_Микола.docx
lab8/: lab8  lab8.c  ЛБ8_Берніш_Микола.docx
lab9/: CMakeLists.txt  lab9.c  ЛБ9_Берніш_Микола.docx
ессе2/: ессе.docx  ессе2.docx
